--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "core-js": "^3.8.3",
     "vue": "^3.2.13",
+    "vue-svg-loader": "^0.16.0",
     "vuex": "^4.0.0"
   },
   "devDependencies": {
