--- a/package.json
+++ b/package.json
@@ -1,8 +1,11 @@
 {
   "name": "elevator_simulator",
   "version": "0.1.0",
+  "homepage": "https://ascurse.github.io/elevator_simulator/",
   "private": true,
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint"
@@ -21,6 +24,7 @@
     "@vue/cli-plugin-vuex": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
     "eslint": "^7.32.0",
-    "eslint-plugin-vue": "^8.0.3"
+    "eslint-plugin-vue": "^8.0.3",
+    "gh-pages": "^4.0.0"
   }
 }
